# Modulo

./: CMakeLists.txt  README.md
Modulo/: ModuloNode.cpp  ModuloNode.h  pluginMain.cpp
